--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <nav>
       <a href="#" onclick="loadCategory('lektury')">Lektury</a>
       <a href="#" onclick="loadCategory('sprawdziany')">Sprawdziany</a>
-      <a href="#" onclick="loadCategory('przygotowania')">Przygotowania</a>
       <a href="#" onclick="loadCategory('notatki')">Notatki</a>
       <a href="#" onclick="loadCategory('plan')">Plan lekcji</a>
-      <a href="login.html">Admin</a>
+      <a href="admin.html">Panel Admina</a>
     </nav>
   </header>
-  <main id="content">Wybierz kategorię z góry</main>
+  <main id="content">
+    <h2>Wybierz kategorię z menu</h2>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
