--- a/login.html
+++ b/login.html
@@ -2,33 +2,36 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Logowanie - Admin</title>
+  <title>Logowanie</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main>
-    <h2>Logowanie administratora</h2>
-    <input type="text" id="login" placeholder="Login" />
-    <input type="password" id="password" placeholder="Hasło" />
-    <button onclick="login()">Zaloguj</button>
-  </main>
+  <h1>Zaloguj się jako admin</h1>
+  <form id="loginForm">
+    <input type="text" id="username" placeholder="Login" required />
+    <input type="password" id="password" placeholder="Hasło" required />
+    <button type="submit">Zaloguj</button>
+  </form>
   <script>
-    async function login() {
-      const login = document.getElementById('login').value;
-      const password = document.getElementById('password').value;
-      const res = await fetch('https://twoj-backend.onrender.com/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ login, password })
+    const backendUrl = 'https://klasa7a-api.onrender.com/'; // <- ZMIEŃ NA SWOJE
+    document.getElementById("loginForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const res = await fetch(`${backendUrl}/login`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          username: document.getElementById("username").value,
+          password: document.getElementById("password").value,
+        }),
       });
       const data = await res.json();
       if (data.token) {
-        localStorage.setItem('token', data.token);
-        window.location.href = 'admin.html';
+        localStorage.setItem("token", data.token);
+        location.href = "admin.html";
       } else {
-        alert('Błędne dane logowania');
+        alert("Nieprawidłowe dane");
       }
-    }
+    });
   </script>
 </body>
 </html>
