--- a/admin.html
+++ b/admin.html
@@ -21,6 +21,6 @@
   </form>
   <h2>Twoje wpisy</h2>
   <ul id="postList"></ul>
-  <script src="script.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
